added contact adn projects with footer

--- a/src/components/Navbar/NavBar.css
+++ b/src/components/Navbar/NavBar.css
@@ -26,7 +26,24 @@
   transform: scale(1.05);
 }
 
-.navbar img {
-  width: 150px;
+.navbar-img {
+  width: 220px;
   height: auto;
+}
+
+.nav-menu li {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  cursor: pointer;
+}
+
+.nav-menu li img {
+  display: flex;
+  margin: auto;
+}
+
+.anchor-link {
+  text-decoration: none;
+  color: white;
 }
