--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -31,7 +31,7 @@
 /* The actual timeline (the vertical ruler) */
 .timeline {
   position: relative;
-  max-width: 1200px;
+  max-width: 1500px;
   margin: 0 auto;
 }
 
@@ -121,8 +121,24 @@
   border: 2px solid white;
 }
 
+.content h2 {
+  font-size: 38px;
+  font-weight: 800;
+  background: linear-gradient(270deg, #df8908 50%, #b415ff 100.6%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.content p {
+  color: #d4d4d4;
+  font-size: 24px;
+  line-height: 44px;
+  /* max-width: 300px; */
+}
+
 /* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1200px) {
   /* Place the timelime to the left */
   .timeline::after {
     left: 31px;
