--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,7 +10,8 @@
   gap: 30px;
 }
 
-.footer-top {
-  display: flex;
-  justify-content: space-between;
+@media (max-width: 768px) {
+  .footer {
+    margin: 50px 70px;
+  }
 }
