--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -83,3 +83,45 @@
   text-decoration: none;
   color: white;
 }
+
+@media (max-width: 768px) {
+  .projects {
+    align-items: start;
+    gap: 70px;
+    margin: 20px 70px;
+  }
+
+  .project-title h1 {
+    padding: 0;
+    font-size: 50px;
+  }
+
+  .project-title img {
+    width: 130px;
+    margin-right: -20px;
+  }
+
+  .projects-format {
+    gap: 20px;
+    padding: 32px;
+  }
+
+  .projects-format h2 {
+    font-size: 28px;
+  }
+
+  .projects-format p {
+    font-size: 18px;
+    line-height: 32px;
+    max-width: 500px;
+  }
+
+  .projects-code img {
+    width: 20px;
+  }
+
+  .project-container {
+    grid-template-columns: 1fr;
+    gap: 30px;
+  }
+}
